Noticed issue with alignment in catering page (iPad); started redoing the layout code; not finished

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,9 @@ header .container-fluid .row .col {
     left:calc(50% - 120px); */
 }
 
+main.col-12.cafejumbo {
+    height:300px;
+}
 /* -----FOOTER ----*/
 .footer-sets {
     /* background-color:#dcc7aa; */
@@ -456,6 +459,7 @@ footer p {
     width:70%;
 }
 }
+
 
 @media (max-width:768px) {
     #theatre-head, #music-head {
